fix：修复nav栏z-index问题

--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -1,7 +1,9 @@
-.wrapper{
+.wrapper {
     position: relative;
-    .navbar{
+
+    .navbar {
         position: sticky;
         top: 0;
+        z-index: var(--z-index-navbar);
     }
 }
